Inserção de dados

--- a/index.html
+++ b/index.html
@@ -85,35 +85,15 @@
     <!-- Médias -->
     <h3 class="titulo">Resumo RH</h3>
     <div id="mediasDadosRH" class="medias-rh">
-        <h3>Total de Colaboradores :</h3><h3 id="somaTC">20</h3>
-        <h3>Soma dos Salários :</h3><h3 id="somaSal">20</h3>
-        <h3>Média de idade :</h3><h3 id="somaIdade">20</h3>
-        <h3>Média Salarial :</h3><h3 id="mediaSal">20</h3>
+        <h3>Total de Colaboradores :</h3><h3 id="somaTC"></h3>
+        <h3>Soma dos Salários :</h3><h3 id="somaSal"></h3>
+        <h3>Média de idade :</h3><h3 id="somaIdade"></h3>
+        <h3>Média Salarial :</h3><h3 id="mediaSal"></h3>
     </div>
 
     <!-- Card Funcinários -->
     <h3 class="titulo">Funcionários: </h3>
     <div id="visualizacao">
-
-    <!-- Div Mock -->
-
-    <!-- <div class="card">
-        <div class="descricao-card">
-            <p><b>José da Silva</b></p>
-            <p>Idade: <b>45 anos</b></p>
-            <p>Cargo: <b>Gerente de Projetos</b></p>
-            <p>Salário: <b>R$ 10.000</b></p>
-            <p>Data Admissão: <b>15/05/2022</b></p>
-        </div>
-        <div class="acoes">
-            <span class="material-icons acao" onclick="removeFuncionario()">
-                delete
-            </span>
-            <span class="material-icons edit" onclick="editarFuncionario()">edit</span>
-        </div>
-    </div> -->
-
-    <!-- Div Mock -->
 
     </div>
 
